DE22954: Fix double scrollbar on ISP

--- a/src/apps/iterationtrackingboard/IterationTrackingBoardApp.less
+++ b/src/apps/iterationtrackingboard/IterationTrackingBoardApp.less
@@ -1,5 +1,5 @@
 .iterationtrackingboard {
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .iterationtrackingboard .header {
